--- a/frontend/src/components/HeaderMegaMenu/HeaderMegaMenu.module.css
+++ b/frontend/src/components/HeaderMegaMenu/HeaderMegaMenu.module.css
@@ -2,6 +2,8 @@
     height: 60px;
     padding-left: var(--mantine-spacing-md);
     padding-right: var(--mantine-spacing-md);
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-bottom: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
   }
   
