--- a/frontend/src/components/HeaderMegaMenu/HeaderMegaMenu.module.css
+++ b/frontend/src/components/HeaderMegaMenu/HeaderMegaMenu.module.css
@@ -2,9 +2,10 @@
     height: 60px;
     padding-left: var(--mantine-spacing-md);
     padding-right: var(--mantine-spacing-md);
-    padding-top: 10px;
-    padding-bottom: 10px;
     border-bottom: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+    z-index: 99999;
+    position: relative;
+    background: black;
   }
   
   .link {
@@ -18,7 +19,7 @@
     font-weight: 500;
     font-size: var(--mantine-font-size-sm);
   
-    @media (max-width: $mantine-breakpoint-sm) {
+    @media (max-width: var(--mantine-breakpoint-sm)) {
       height: 42px;
       width: 100%;
     }
@@ -45,4 +46,13 @@
     padding: var(--mantine-spacing-md) calc(var(--mantine-spacing-md) * 2);
     padding-bottom: var(--mantine-spacing-xl);
     border-top: 1px solid light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
+  }
+
+  .buttonConnect{
+    background: #263338;
+  }
+
+  .buttonConnect:hover{
+    background: white;
+    color: black;
   }
