background, fix post

--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -7,3 +7,17 @@
 .mantine-Chip-iconWrapper{
     display: none !important;
 }
+
+.bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("./../public/bg.webp");
+    background-size: cover;
+    background-position: center;
+    opacity: 0.35; /* Adjust the opacity here */
+    z-index: -1;
+
+}
