--- a/frontend/styles/index.module.css
+++ b/frontend/styles/index.module.css
@@ -1,9 +1,22 @@
 .allContainer{
-    background-image: url("./../public/bg.webp");
-    
+    overflow: hidden;
+    position: relative;
+    width: 100%;
     height: 100vh;
 }
+.bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("./../public/bg.webp");
+    background-size: cover;
+    background-position: center;
+    opacity: 0.35; /* Adjust the opacity here */
+    z-index: -1;
 
+}
 .title{
     font-size: 3rem;
     font-weight: 700;
