--- a/frontend/styles/index.module.css
+++ b/frontend/styles/index.module.css
@@ -21,6 +21,8 @@
     font-size: 3rem;
     font-weight: 700;
     color: white;
+    font-family: "Anta", serif;
+    font-style: normal;
 }
 
 .subTitle{
