--- a/frontend/src/components/HeaderMegaMenu/HeaderMegaMenu.module.css
+++ b/frontend/src/components/HeaderMegaMenu/HeaderMegaMenu.module.css
@@ -47,3 +47,11 @@
     padding-bottom: var(--mantine-spacing-xl);
     border-top: 1px solid light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
   }
+
+  .reportList{
+    cursor: pointer;
+  }
+
+  .reportList:hover {
+    color: #11BA99
+  }
