--- a/frontend/styles/index.module.css
+++ b/frontend/styles/index.module.css
@@ -2,7 +2,8 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-    height: 100vh;
+    /* max-height: 100vh; */
+    height: 100%;
 }
 .bg{
     position: absolute;
